<?xml version="1.0"?>
<package format="2">
  <name>sdpo_ros_odom</name>
  <version>0.0.0</version>
  <description>The 5dpo_ros_odom package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sousa.ricardob@outlook.com">Ricardo B. Sousa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="github">https://github.com/5dpo/5dpo_ros_odom</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="heber.m.sobreira@inesctec.pt">Héber Miguel Sobreira</author>
  <author email="joao.g.martins@inesctec.pt">João G. Martins</author>
  <author email="sousa.ricardob@outlook.com">Ricardo B. Sousa</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
