<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>sdpo_localization_odom</name>

  <version>0.0.0</version>

  <description>
    Data processor for the estimation of the robot pose based on odometric-only
    data (e.g., wheeled, laser, visual, and/or inertial odometry).
  </description>



  <maintainer email="sousa.ricardob@outlook.com">Ricardo B. Sousa</maintainer>

  <author email="amoreira@fe.up.pt">António Paulo Moreira</author>
  <author email="claudia.d.rocha@inesctec.pt">Cláudia Daniela Rocha</author>
  <author email="joao.g.martins@inesctec.pt">João G. Martins</author>
  <author email="up201806431@edu.fe.up.pt">João Pedro Costa</author>
  <author email="joaotomasmfgp@hotmail.com">João Tomás Padrão</author>
  <author email="jose.m.sarmento@inesctec.pt">José Maria Sarmento</author>
  <author email="up201806263@edu.fe.up.pt">José Pedro Carvalho</author>
  <author email="maria.s.lopes@inesctec.pt">Maria S. Lopes</author>
  <author email="paco@fe.up.pt">Paulo G. Costa</author>
  <author email="sousa.ricardob@outlook.com">Ricardo B. Sousa</author>



  <license>GNU General Public License version 3</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sdpo_drivers_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
